--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
-}
-
 .inq {
     margin: 0px;
     display: flex;
@@ -86,9 +80,9 @@
     max-width: calc(33.333% - 40px);
     box-sizing: border-box;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
-
+z
 .items {
     display: flex;
     justify-content: left;
@@ -96,7 +90,6 @@
 }
 
 .items img {
-    margin-top: 20px;
     height: 50%;
     width: auto;
     border-radius: 20px;
@@ -202,4 +195,36 @@
     height: 40px;
     width: auto;
 
+}
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .poster img {
+        margin-top: 10px;
+        width: 100%;
+        border-radius: 10px;
+    }
+
+    .items div {
+        flex-shrink: 1 ;
+        flex-grow:1; 
+        flex-basis:100%;
+        max-width: 100%;
+    }
+
+    .img-logo img, .img-acc img, .center-logo img {
+        width: 100%;
+        margin: 0;
+    }
+
+    .inq {
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .buy-now-btn, .back-to-top {
+        width: 100%;
+    }
 }
